<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3" >

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7" >

        <TextView
            android:id="@+id/labelVelocidadMedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/velocidadMedia"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/labelDistanciaTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/labelTiempo"
            android:layout_alignRight="@+id/labelVelocidadMedia"
            android:layout_marginBottom="14dp"
            android:text="@string/distanciaTotal"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/labelTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/labelVelocidadMedia"
            android:layout_alignRight="@+id/labelVelocidadMedia"
            android:layout_marginBottom="14dp"
            android:text="@string/tiempoTotal"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtDistanciaTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/labelDistanciaTotal"
            android:layout_alignBottom="@+id/labelDistanciaTotal"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:text="distanciaTotal"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtVelocidadMedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/labelVelocidadMedia"
            android:layout_alignBottom="@+id/labelVelocidadMedia"
            android:layout_alignRight="@+id/txtDistanciaTotal"
            android:text="velocidadMedia"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtTiempoTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/labelTiempo"
            android:layout_alignBottom="@+id/labelTiempo"
            android:layout_alignRight="@+id/txtVelocidadMedia"
            android:text="tiempoTotal"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</LinearLayout>